# pve-freq

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT-TRACKER.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MASTER-PLAN.md  README.md  SECURITY.md  docker-compose.yml  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  release.yml  test.yml
conf/: .gitignore  containers.toml.example  fleet-boundaries.toml.example  freq.toml.example  hosts.conf  switch-profiles.toml.example
conf/personality/: default.toml
conf/playbooks/: host-recovery.toml.example  plex-down.toml.example
conf/plugins/: example_ping.py
contrib/: deploy-test.sh  freq-serve.service
docs/: API-REFERENCE.md  ATOMIC-AUDIT-2026-04-02.md  BOOTSTRAP-SCOPE-LOCK.md  BREAK-GLASS.md  CLI-REFERENCE.md  CODEBASE-STANDARD-2026.md  COMMAND-SURFACE-E2E-MATRIX.md  CONFIGURATION.md  DC01-FLEET-REFERENCE.md  DEEP-AUDIT-FINDINGS.md  E2E-EXECUTION-PLAN.md  E2E-PROGRESS.md  IDENTITY-CONTRACT.md  MASTER-10x-E2E-GAUNTLET.md  MORTY-LESSONS.md  QUICK-REFERENCE.md  RUN9-MALICIOUS-ATTEMPT-LEDGER.md  SURFACE-PARITY-MATRIX.md  TUI-UX-MATRIX.md  ULTIMATE-ATOMIC-AUDIT-2026-04-02.md  WEB-UX-MATRIX.md  docker-api-reference.md  fleet-state.md  network-topology.md  v1-library-reference.md
docs/.internal/: E2E-EXECUTION-PLAN.md
docs/freqconcourstheworld/: DOMINANCE-RESEARCH.md  E2E-TEST-PLAN.md  FEATURE-PLAN.md  GIT-READY-FOR-PUBLIC-RELEASE.md  MARKET-RESEARCH.md  README-BLUEPRINT.md  RELEASE-STRATEGY.md  SOURCE-CODE-STANDARDS.md  THE-CONVERGENCE-OF-PVE-FREQ.md  THE-REWRITE-EXECUTION-PLAYBOOK.md
docs/screenshots/: CAPTURE-GUIDE.md  README.md  freq-doctor.txt  freq-help.txt  freq-version.txt
freq/: __init__.py  __main__.py  agent_collector.py  cli.py
freq/api/: __init__.py  auth.py  auto.py  backup_verify.py  bench.py  ct.py  docker_api.py  dr.py  fleet.py  fw.py  helpers.py  host.py  hw.py  ipmi.py  logs.py  net.py  observe.py  opnsense.py  ops.py  plugin.py  redfish.py  secure.py  state.py  store.py  synology.py  terminal.py  user.py  v1_stubs.py  vm.py
freq/core/: __init__.py  audit.py  compat.py  config.py  doctor.py  exitcodes.py  fmt.py  health_state.py  log.py  packages.py  (+10 more)
reference/: FREQ-HANDOFF.md  FROM-JARVIS-WSL.md  WELCOME-FREQ-DEV.md
scripts/: add-agent.sh  agent-rescue.sh  constitution-check.sh  debug-post.sh  debug-pre.sh  freqdev-screen.sh  nexus-bashrc-wip.sh  nexus-doctor.sh  nexus-fix.sh  public-exclude.txt  release.sh  session-journal.sh  statusline.sh  sync-public.sh
tests/: overnight-matrix.md  test_admin_api.py  test_agent_deploy_stdin.py  test_ah_semantic_classes_contract.py  test_api_method_enforcement.py  test_api_reference_truth.py  test_auth_deadend_truth.py  test_auth_decorator.py  test_auth_fetch_silent_opt_contract.py  test_auth_integration.py  test_auth_preauth_storm_contract.py  test_auth_restart_drift_contract.py  test_auto_discovery.py  test_blueteam_hardening_contract.py  test_blueteam_ux_contract.py  test_bootstrap_password_precedence.py  test_bootstrap_personality.py  test_brand_surface_contract.py  test_breakglass_operator_truth.py  test_browser_deploy_truth.py  test_cache_discovery_honesty.py  test_cached_staleness_contract.py  test_capacity_recommend.py  test_changelog_truth.py  test_cli.py  test_cli_auth_parity.py  test_cli_entrypoint_contract.py  test_cli_reference_truth.py  test_collection_state_semantics_contract.py  test_command_auth_parity.py  test_config_docs_truth.py  test_config_management.py  test_config_permissions_contract.py  test_config_schema_contract.py  test_config_schema_operator_truth.py  test_config_validate_postinit.py  test_config_validation.py  test_consumer_contract.py  test_containers_acceptance.py  test_containers_consumer_contract.py  (+185 more)
(+698 files in other folders)
