[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pve-freq"
dynamic = ["version"]
description = "Datacenter management CLI for Proxmox homelabbers"
requires-python = ">=3.11"
dependencies = []
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "LOW FREQ Labs"}]
keywords = ["proxmox", "datacenter", "fleet", "management", "cli", "homelab", "pve"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/Low-Freq-Labs/pve-freq"
Repository = "https://github.com/Low-Freq-Labs/pve-freq"
Issues = "https://github.com/Low-Freq-Labs/pve-freq/issues"

[project.scripts]
freq = "freq.cli:main"

[tool.setuptools.packages.find]
include = ["freq*"]

[tool.setuptools.package-data]
"freq.data" = [
    "conf-templates/*.example",
    "conf-templates/*.toml",
    "conf-templates/*.conf",
    "conf-templates/personality/*.toml",
    "conf-templates/plugins/*.py",
    "knowledge/*.toml",
    "web/*.html",
    "web/css/*.css",
    "web/js/*.js",
]

[tool.setuptools.dynamic]
version = {attr = "freq.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=freq --cov-report=term-missing --cov-fail-under=50"

[tool.coverage.run]
branch = true
source = ["freq"]
omit = ["freq/data/*", "freq/tui/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
